--- a/ControleEstoque.Web/Views/_ViewImports.cshtml
+++ b/ControleEstoque.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,9 @@
 ﻿@using ControleEstoque.Web
 @using ControleEstoque.Web.Models
+@using System.Web
+@using Microsoft.AspNetCore.Mvc
+@using Microsoft.AspNetCore.Mvc.ViewFeatures
+@addTagHelper *, Microsoft.AspNet.Mvc.TagHelpers
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+
+
